--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -26,6 +26,8 @@
 <link rel="import" href="../../../bower_components/paper-styles/color.html">
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../shell/actions/user-actions.html">
+<link rel="import" href="meal-order-vendor-menus.html">
+
 <dom-module id="meal-order-menu-container">
     <template>
         <style>
@@ -92,7 +94,7 @@
                 </paper-tab>
             </template>
         </paper-tabs>
-            <meal-order-vendor-menus items="[[menu]]"></meal-order-vendor-menus>
+            <meal-order-vendor-menus items="[[menuForDay]]"></meal-order-vendor-menus>
     </template>
     <script>
         /**
