--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -162,7 +162,8 @@
             }
 
             _getDate(date) {
-                return date.toISOString().slice(0,10);
+                const DATE_LENGTH = 10;
+                return date.toISOString().slice(0,DATE_LENGTH);
             }
 
             _dateChanged(e) {
