Add computed day of the week for the `paper-tabs`

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -263,7 +263,7 @@
                      * @property {String} quantity
                      */
                     orderForDay: {
-                        type: Array,
+                        type: Object,
                         statePath: 'orderForDay'
                     },
 
