--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -84,7 +84,7 @@
                     <a href="#/menu/[[_getDate(calendar.date)]]"
                        class="paper-tab-container">
                         <div>
-                            <div class="day-of-the-week">{{calendar.dayOfTheWeek}}
+                            <div class="day-of-the-week">[[_getDayOfTheWeek(calendar.date)]]
                             </div>
                             <div class="day">[[_getDay(calendar.date)]]</div>
                         </div>
@@ -164,6 +164,12 @@
             _getDate(date) {
                 const DATE_LENGTH = 10;
                 return date.toISOString().slice(0,DATE_LENGTH);
+            }
+
+            _getDayOfTheWeek(date) {
+                let dayOfTheWeek = date.toLocaleDateString("ru-RU", {weekday: 'short'});
+                dayOfTheWeek = dayOfTheWeek.charAt(0).toUpperCase() + dayOfTheWeek.slice(1);
+                return dayOfTheWeek;
             }
 
             _dateChanged(e) {
