--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -337,15 +337,14 @@
                 }
             }
 
-
             _pageChanged() {
                 const DATE_LENGTH = 10;
                 if (!this.routeData.page || (this.routeData.page.startsWith("menu") && !this.routeData.date)) {
-                    this.set('route.path', '/menu/' + this.currentDate.toISOString().slice(0,DATE_LENGTH));
+                    this.set('route.path', '/menu/' + this.currentWeekMenus[0].date.toISOString().slice(0,DATE_LENGTH));
                 }
                 if (this.routeData.page.startsWith("history")) {
                     if (!this.routeData.date) {
-                        let yesterday = new Date(this.currentDate);
+                        let yesterday = new Date(this.currentWeekMenus[0].date);
                         yesterday.setDate(yesterday.getDate()-1);
                         this.set('routeData.date', yesterday.toISOString().slice(0, DATE_LENGTH));
                     }
