--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -22,43 +22,9 @@
 
 <script>
     {
-        const arrayOfDates = [{
-            date: new Date('2018-03-21'),
-            hasMenu: true
-        },
-            {
-                date: new Date('2018-03-22'),
-                hasMenu: true
-            },
-            {
-                date: new Date('2018-03-23'),
-                hasMenu: true
-            },
-            {
-                date: new Date('2018-03-24'),
-                hasMenu: false
-            },
-            {
-                date: new Date('2018-03-25'),
-                hasMenu: false
-            }
-            , {
-                date: new Date('2018-03-26'),
-                hasMenu: true
-            }
-            , {
-                date: new Date('2018-03-27'),
-                hasMenu: true
-            }
-            , {
-                date: new Date('2018-03-28'),
-                hasMenu: true
-            }];
-
         MealOrderApp.initialState = {
-            currentWeekMenus: arrayOfDates,
 
-            menuForDay: [],
+            serverTime: new Date('2018-03-21'),
             menus: [
                 {
                     vendor: 'Пюре',
@@ -139,47 +105,28 @@
                                 {title: 'Лимонад', price: 40}]
                         }
                     ]
+                },
+                {
+                    vendor: 'Позитив',
+
+                    categories: [{
+                        categoryName: 'Первое блюдо', dishes: [
+                            {title: 'Суп сырный', price: 35},
+                            {title: 'Суп с лапшой', price: 40},
+                            {title: 'Борщ красный', price: 40},
+                            {title: 'Борщ зеленый', price: 35}]
+                    }
+                        , {
+                            categoryName: 'Второе блюдо', dishes: [
+                                {title: 'Стейк из лосося', price: 40},
+                                {title: 'Стейк из говядины', price: 45}]
+                        },
+                        {
+                            categoryName: 'Напитки', dishes: [
+                                {title: 'Лимонад', price: 40}]
+                        }
+                    ]
                 }],
-            orderForDay: [],
-            orders: [{
-                date: new Date('2018-03-21'),
-                order: [{
-                    vendor: "Пюре",
-                    dishes: [
-                        {title: 'Борщ украинский', price: 35, quantity: 1},
-                        {title: 'Солянка', price: 40, quantity: 1},
-                        {title: 'Суп гороховый', price: 40, quantity: 1},
-                        {title: 'Уха', price: 35, quantity: 1},
-                        {title: 'Суп-пюре грибной', price: 40, quantity: 1},
-                        {title: 'Суп куриный', price: 40, quantity: 1},]
-                }, {
-                    vendor: 'Позитив',
-                    dishes: [{title: 'Суп куриный', price: 35, quantity: 1}, {
-                        title: 'Стейк из лосося',
-                        price: 35,
-                        quantity: 1
-                    }]
-                }]
-            }, {
-                date: new Date('2018-03-22'),
-                order: [{
-                    vendor: "Пюре",
-                    dishes: [
-                        {title: 'Щи русские', price: 48, quantity: 1},
-                        {title: 'Солянка', price: 40, quantity: 1},
-                        {title: 'Суп гороховый', price: 40, quantity: 1},
-                        {title: 'Уха', price: 35, quantity: 1},
-                        {title: 'Суп-пюре грибной', price: 40, quantity: 1},
-                        {title: 'Суп куриный', price: 40, quantity: 1},]
-                }, {
-                    vendor: 'Позитив',
-                    dishes: [{title: 'Лапша по армянски', price: 35, quantity: 1}, {
-                        title: 'Стейк из лосося',
-                        price: 35,
-                        quantity: 1
-                    }]
-                }]
-            }]
         };
 
         MealOrderApp.reducer = (state, action) => {
@@ -187,15 +134,6 @@
                 return MealOrderApp.initialState;
             }
             switch (action.type) {
-                case MealOrderApp.UserAction.SET_CURRENT_DATE: {
-                    const menu = state.menus.filter(menu => menu.date.getTime() === action.date.getTime());
-                    const newOrder = state.orders.find(order => order.date.getTime() === action.date.getTime());
-                    return Object.assign({}, state, {
-                            menuForDay: menu,
-                            currentOrder: newOrder,
-                        }
-                    );
-                }
                 default : {
                     return state;
                 }
