--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -221,7 +221,6 @@
 
             static get properties() {
                 return {
-
                     /**
                      * Menu for a current day.
                      *
@@ -254,6 +253,9 @@
                         type: Object,
                     },
 
+                    /**
+                     * The current server time for the calendar.
+                     */
                     serverTime: {
                         type: Object,
                         statePath: 'serverTime'
